Merge remote-tracking branch 'origin/master' into Gp_upgrade