@@ -21,12 +21,14 @@ import java.net.URISyntaxException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
@@ -74,8 +76,10 @@ import com.esri.geoportal.lib.elastic.util.FieldNames;
 import com.esri.geoportal.service.stac.Collection;
 import com.esri.geoportal.service.stac.GeometryServiceClient;
 import com.esri.geoportal.service.stac.StacContext;
+import com.jayway.jsonpath.Configuration;
 import com.jayway.jsonpath.DocumentContext;
 import com.jayway.jsonpath.JsonPath;
+import com.jayway.jsonpath.Option;
 
 import net.minidev.json.JSONArray;
 import net.minidev.json.JSONObject;
@@ -102,10 +106,14 @@ public class STACService extends Application {
 	private final GeoportalContext gc = GeoportalContext.getInstance();
 	private final StacContext sc = StacContext.getInstance();
 	private final ElasticClient client = ElasticClient.newClient();
-  private final GeometryServiceClient geometryClient = new GeometryServiceClient(gc.getGeometryService());
+	private final GeometryServiceClient geometryClient = new GeometryServiceClient(gc.getGeometryService());
 
   private final String INTERNAL_CRS = "EPSG:4326";
   private final String INTERNAL_VCRS = "EPSG:115807";
+  Configuration conf = Configuration.builder()
+          .options(Option.DEFAULT_PATH_LEAF_TO_NULL)
+          .build();
+  private static JSONObject propExtensionObj = loadExtensionProperties();
   
 	
 	@Override
@@ -113,6 +121,21 @@ public class STACService extends Application {
 		Set<Class<?>> resources = new HashSet<>();
 		resources.add(STACService.class);
 		return resources;
+	}
+
+  private static JSONObject loadExtensionProperties() {
+		//read stac-extension-prop.json file which has properties for STAC extensions and load it in a JSONObject
+		JSONObject propExtensionObj = new JSONObject();		
+		try {
+			ResourcePath rp = new ResourcePath();
+			URI uri = rp.makeUrl("service/config/stac-extension-prop.json").toURI();
+			String propExtensionStr = new String(Files.readAllBytes(Paths.get(uri)), "UTF-8");
+			
+			propExtensionObj = (JSONObject) JSONValue.parse(propExtensionStr);
+		} catch (Exception e) {
+			LOGGER.error("Error reading stac-extension-prop.json file: " + e.getMessage());
+		}
+		return propExtensionObj;
 	}
 
   /**
@@ -302,6 +325,7 @@ public class STACService extends Application {
 					// respond in STAC JSON
 					finalresponse = stacCollections.toString();
 				}
+
 				finalresponse = finalresponse.replaceAll("\\{url\\}", this.getBaseUrl(hsr));
 			
 
@@ -603,7 +627,7 @@ public class STACService extends Application {
 		String response;
 		Status status = Response.Status.OK;
 		JSONArray detailErrArray = new JSONArray();
-		String filePath = "service/config/stac-item.json";
+		String filePath = "service/config/stac-items.json";
 		
 		try {
 			response = StacHelper.getItemWithItemId(collectionId, id);
@@ -799,7 +823,7 @@ public class STACService extends Application {
 	@GET
 	@Produces("application/geo+json")
 	@Path("/search")
-	public Response fs(@Context HttpServletRequest hsr, @QueryParam("limit") int limit,
+	public Response search(@Context HttpServletRequest hsr, @QueryParam("limit") int limit,
 			@QueryParam("bbox") String bbox, @QueryParam("intersects") String intersects,
 			@QueryParam("datetime") String datetime, @QueryParam("updated") String updated, @QueryParam("created") String created, @QueryParam("ids") String idList,
 			@QueryParam("collections") String collections, @QueryParam("search_after") String searchAfter,
@@ -1887,7 +1911,26 @@ public class STACService extends Application {
 			JsonObject obj = (JsonObject) JsonUtil.toJsonStructure(featureContext.jsonString());
 			JsonObject resObj = obj.getJsonObject("featurePropPath");
 
-			finalResponse = resObj.toString();
+	        DocumentContext ctx = JsonPath.using(conf).parse(resObj.toString());
+
+	       //Find links->rel=parent], add /items in href        
+	        List<Map<String, Object>> links = ctx.read("$.links");
+
+	        for (Map<String, Object> link : links) {
+	            Object rel = link.get("rel");
+	            if ("parent".equals(rel)) {
+	                Object href = link.get("href");
+	                if (href != null) {
+	                    String s = href.toString();
+	                    if (!s.endsWith("/items")) {
+	                        link.put("href", s + "/items");
+	                    }
+	                }
+	            }
+	        }
+	        ctx.set("$.links", links);
+
+	        finalResponse = ctx.jsonString();
 		} else {
 			finalResponse = this.generateResponse("404", "Record not found.",null);
 
@@ -2122,6 +2165,7 @@ public class STACService extends Application {
 			//#680 
 			//fill item with collection properties when not available in item, item property overrides default set in collection	
 			Set<String> collectionPropKeySet = null;
+			Set<Entry<String, Object>> collectionPropEntrySet = null;
 			JSONObject collectionPropObj = null;
 			ArrayList <String> propToBeAddedFromCollectionList = new ArrayList<String>();
 				  
@@ -2131,6 +2175,7 @@ public class STACService extends Application {
 			    	collectionPropObj = collection.getProperties();
 				    if (collectionPropObj != null) {
 				        collectionPropKeySet =  collectionPropObj.keySet(); 
+				        
 				        //Create a combined set of property keys from item and collection
 				        Set<String> combinedPropSet = Stream.concat(propObjKeys.stream(), collectionPropKeySet.stream())
 			                     .collect(Collectors.toSet()); 
@@ -2184,8 +2229,19 @@ public class STACService extends Application {
 			{
 				updatedPropObj.put(prop, collectionPropObj.getAsString(prop));
 			}
+			//finally iterate over search item properties and add those which are not in feature properties, this is to add any additional property from search item which are not in feature template
+			HashMap<String, Object> searchItemPropObj = searchItemCtx.read("$._source.properties");
+			Set<String> searchItemPropKeySet = searchItemPropObj.keySet();
+			for(String prop: searchItemPropKeySet)
+			{
+				if(!updatedPropObj.containsKey(prop))
+				{
+					updatedPropObj.put(prop, searchItemPropObj.get(prop)!=null? searchItemPropObj.get(prop).toString():null);
+				}
+			}
+			
 			featureContext.set("$.featurePropPath.properties",updatedPropObj);
-
+			
 			String linkSelfHref = featureContext.read("$.featurePropPath.links[0].href");
 			linkSelfHref = linkSelfHref.replaceAll("\\{itemId\\}", featureContext.read("$.featurePropPath.id").toString());
 			
@@ -2216,9 +2272,10 @@ public class STACService extends Application {
 		for (String assetToRemove : assetToBeRemovedList) {
 			//Assets are populated from Feature in step Add_ALL_ASSET (so first validate if it still needs removal
 			assetObj = featureContext.read(assetToRemove);
-			if(assetObj instanceof JSONObject assetJSONObj)
+			if(assetObj instanceof JSONObject)
 			{
-				if(assetJSONObj.getAsString("href").contains("$."))// Still JSON path from stac-item.json
+				JSONObject assetJSONObj = (JSONObject)assetObj;
+				if(assetJSONObj.getAsString("href").contains("$."))// Still JSON path from stac-items.json
 					featureContext.delete(assetToRemove);
 			}
 			else
@@ -2226,6 +2283,12 @@ public class STACService extends Application {
 				featureContext.delete(assetToRemove);
 			}			
 		}
+		HashMap<String, String> finalPropObj =featureContext.read("$.featurePropPath.properties"); // read again to make sure all changes are applied before adding stac_extension based on properties
+		
+		//Determine stac_extensions to be added in feature based on properties in item, for example if eo:bands properties are available, add "eo" in stac_extension
+		JSONArray stacExtenions = StacHelper.addExtensionsFromProperties(finalPropObj,propExtensionObj);
+		featureContext.set("$.featurePropPath.stac_extensions", stacExtenions);
+		
 		return featureValid;
 	}
 
@@ -2336,7 +2399,7 @@ public class STACService extends Application {
 	public String readResourceFile(String path, HttpServletRequest hsr) throws IOException, URISyntaxException {
 		ResourcePath rp = new ResourcePath();
 		URI uri = rp.makeUrl(path).toURI();
-		String filedataString = new String(Files.readAllBytes(java.nio.file.Path.of(uri)), "UTF-8");
+		String filedataString = new String(Files.readAllBytes(Paths.get(uri)), "UTF-8");
 
 		if (filedataString != null)
 			filedataString = filedataString.trim();
@@ -2591,15 +2654,15 @@ public class STACService extends Application {
 	                  upperLeft.add(envelope.get("ymax"));
 	                  lowerRight.add(envelope.get("xmax"));
 	                  lowerRight.add(envelope.get("ymin"));
-
+	
 	                  JSONArray projectedEnvelope = new JSONArray();
 	                  projectedEnvelope.add(upperLeft);
 	                  projectedEnvelope.add(lowerRight);
-
+	
 	                  JSONObject newEnvelopeGeometry = new JSONObject();
 	                  newEnvelopeGeometry.put("type", "Envelope");
 	                  newEnvelopeGeometry.put("coordinates", projectedEnvelope);
-
+	
 	                  JSONArray newEnvelopeGeometries = new JSONArray();
 	                  newEnvelopeGeometries.add(newEnvelopeGeometry);
 
@@ -2634,7 +2697,7 @@ public class STACService extends Application {
     for (String geometryType: geometryTypes) {
       if (null != geometry_wkt_in) {
         if (geometry_wkt_in.containsKey(geometryType)) {
-        	JSONObject geometry = (JSONObject) geometry_wkt_in.get(geometryType);
+        	JSONObject geometry = (JSONObject) geometry_wkt_in.get(geometryType.toLowerCase());
         	JSONArray projectedGeometries = new JSONArray();
             String wkt = geometry.getAsString("wkt");
             Boolean hasZ = wkt.contains("Z");
@@ -2782,38 +2845,12 @@ public class STACService extends Application {
               projectedBbox.add(newBbox.get("ymax"));
               JSONArray firstBbox = new JSONArray();
               firstBbox.add(projectedBbox);
-
-              // set the new bbox
               bbox.set(0, firstBbox);
 
               break;
 
-            case "envelope_geo":
-              JSONObject envelope = (JSONObject) projectedGeometries.get(0);
-              JSONArray upperLeft = new JSONArray();
-              JSONArray lowerRight = new JSONArray();
-              upperLeft.add(envelope.get("xmin"));
-              upperLeft.add(envelope.get("ymax"));
-              lowerRight.add(envelope.get("xmax"));
-              lowerRight.add(envelope.get("ymin"));
-
-              JSONArray projectedEnvelope = new JSONArray();
-              projectedEnvelope.add(upperLeft);
-              projectedEnvelope.add(lowerRight);
-
-              JSONObject newEnvelopeGeometry = new JSONObject();
-              newEnvelopeGeometry.put("type", "Envelope");
-              newEnvelopeGeometry.put("coordinates", projectedEnvelope);
-
-              JSONArray newEnvelopeGeometries = new JSONArray();
-              newEnvelopeGeometries.add(newEnvelopeGeometry);
-
-              responseObject.put("envelope_geo", newEnvelopeGeometries);
-
-              break;
-	
-                default:
-                  LOGGER.error("Unsupported geometry field: " + thisGeometryField);
+            default:
+              LOGGER.error("Unsupported geometry field: " + thisGeometryField);
           }
           
           responseObject.put("outCRS", outCRS);
